# AudioFFT

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
resources/: app_icon.rc  resources.qrc
resources/shaders/: overlay.vert
resources/text/: Changelog_EN.md  Copyright_EN.md  Intro_EN.md  UserManual_EN.md  de_Changelog.md  de_Copyright.md  de_Intro.md  de_UserManual.md  en_Changelog.md  en_Copyright.md  en_Intro.md  en_UserManual.md  fr_Changelog.md  fr_Copyright.md  fr_Intro.md  fr_UserManual.md  ja_Changelog.md  ja_Copyright.md  ja_Intro.md  ja_UserManual.md  ko_Changelog.md  ko_Copyright.md  ko_Intro.md  ko_UserManual.md  ru_Changelog.md  ru_Copyright.md  ru_Intro.md  ru_UserManual.md  zh-FT_Changelog.md  zh-FT_Copyright.md  zh-FT_Intro.md  zh-FT_UserManual.md  zh-JT_Changelog.md  zh-JT_Copyright.md  zh-JT_Intro.md  zh-JT_UserManual.md
resources/translations/: AudioFFT_de.ts  AudioFFT_en.ts  AudioFFT_fr.ts  AudioFFT_ja.ts  AudioFFT_ko.ts  AudioFFT_ru.ts  AudioFFT_zh-FT.ts  AudioFFT_zh-JT.ts
src/: AboutDialog.cpp  AboutDialog.h  AlignedAllocator.h  ApePipeline.cpp  ApePipeline.h  AppConfig.h  AudioDecoder.cpp  AudioDecoder.h  AvifImageEncoder.cpp  AvifImageEncoder.h  BatAudioDecoder.cpp  BatAudioDecoder.h  BatConfig.h  BatFFmpegRAII.h  BatFftProcessor.cpp  BatFftProcessor.h  BatImageExporter.cpp  BatImageExporter.h  BatIoScheduler.cpp  BatIoScheduler.h  BatProcessor.cpp  BatProcessor.h  BatSpectrogramGenerator.cpp  BatSpectrogramGenerator.h  BatTypes.h  BatUtils.h  BatWidget.cpp  BatWidget.h  BatWidgetSettings.cpp  BatWidgetSettings.h  BatWorker.cpp  BatWorker.h  BatchStreamBuffer.cpp  BatchStreamBuffer.h  BatchStreamDecoder.cpp  BatchStreamDecoder.h  BatchStreamFFmpegRAII.h  BatchStreamFft.cpp  BatchStreamFft.h  BatchStreamFftRAII.h  (+165 more)
